[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
youtube_dl = "^2021.12.17"
discord = "^1.7.3"
Flask = "^2.1.2"
pytube = "^12.1.0"
cryptography = "^37.0.2"
urllib3 = "^1.26.9"
geocoder = "^1.38.1"
requests = "^2.28.0"
pandas = "^1.5.1"
tqdm = "^4.64.1"
selenium = "^4.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"